# bitwarden-secret-operator-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  index.yaml
.github/workflows/: release.yml
charts/bitwarden-secret-operator/: Chart.yaml  values.yaml
charts/bitwarden-secret-operator/crds/: bitwarden-secret.yaml
charts/bitwarden-secret-operator/templates/: cluster-role-binding.yaml  cluster-role.yaml  deployment.yaml  service-account.yaml
src/: crdgen.rs  main.rs  monitoring.rs
src/bitwarden_cli/: mod.rs
src/operator/: controller.rs  mod.rs  schemas.rs
tests/: bitwarden-fields.json  bitwarden-note.json
