[package]
name = "bitwarden-operator-rs"
version = "0.1.0"
edition = "2021"

[[example]]
name = "crd"
path = "src/crdgen.rs"
test = false

[[bin]]
name = "bitwarden-operator-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = [] }
serde_json = { version = "1.0" }
kube = { version = "0.89", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.21", features = ["latest"] }
schemars = { version = "0.8", features = ["chrono"] }
anyhow = "1.0"
log = "0.4"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
opentelemetry = { version = "0.22", features = ["trace", "default"] }
opentelemetry_sdk = { version = "0.22", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0", features = ["tokio", "grpc-tonic"] }
tracing-opentelemetry = { version = "0.23" }
tonic = "0.11"
futures = "0.3.30"
futures-util = "0.3.30"
serde_yaml = "0.9"
axum = "0.7"
metrics = { version = "0.22", default-features = false }
metrics-exporter-prometheus = { version = "0.14", default-features = false }
